--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>KasirKu - Sistem Kasir Modern</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    <script src="https://unpkg.com/@ericblade/quagga2@1.2.6/dist/quagga.min.js"></script>
+
     <!-- Firebase App (core) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
@@ -431,18 +432,6 @@
                             <div class="text-sm opacity-75 text-gray-700">Hari ini</div>
                         </div>
                     </div>
-                    <!-- Modal Scan Barcode -->
-<div id="modalScanner" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center">
-  <div class="bg-white rounded-xl p-6 max-w-md w-full">
-    <h3 class="text-lg font-semibold mb-4">Scan Barcode</h3>
-    <div id="scanner" class="rounded overflow-hidden"></div>
-    <div class="text-right mt-4">
-      <button onclick="closeScanner()" class="btn-modern btn-danger-modern">
-        <i class="fas fa-times mr-2"></i> Tutup
-      </button>
-    </div>
-  </div>
-</div>
                     </div>
                 </div>
             </div>
@@ -485,7 +474,6 @@
     </div>
   </div>
 </div>
-
         <!-- Section Produk -->
         <div id="section-produk" class="section hidden fade-in">
             <div class="card-modern p-6">
@@ -640,7 +628,6 @@
     </div>
   </div>
 </div>
-
                 <!-- Detail Transaksi -->
                 <div class="overflow-x-auto">
                     <table class="w-full table-modern">
@@ -858,9 +845,7 @@
   <option value="transfer">Transfer Bank</option>
   <option value="qris">QRIS</option>
   <option value="casbon">Casbon</option> <!-- ✅ Tambahkan ini -->
-</select>
-
-
+        </select>
                 <div id="pembayaranTunai">
                     <label class="block text-sm font-semibold text-gray-700 mb-2">Jumlah Bayar</label>
                     <input type="number" id="jumlahBayar" min="0" class="input-modern w-full" placeholder="Masukkan jumlah bayar">
@@ -880,7 +865,18 @@
             </div>
         </div>
     </div>
-
+     <!-- Modal Scan Barcode -->
+<div id="modalScanner" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center">
+  <div class="bg-white rounded-xl p-6 max-w-md w-full">
+    <h3 class="text-lg font-semibold mb-4">Scan Barcode</h3>
+    <div id="scanner" class="rounded overflow-hidden"></div>
+    <div class="text-right mt-4">
+      <button onclick="closeScanner()" class="btn-modern btn-danger-modern">
+        <i class="fas fa-times mr-2"></i> Tutup
+      </button>
+    </div>
+  </div>
+</div>
     <!-- Notification -->
     <div id="notification" class="notification"></div>
 
@@ -1487,43 +1483,61 @@ function hitungTotal() {
 let qrScannerInstance;
 
 function openScanner() {
+  console.log("🔍 Fungsi openScanner() dipanggil");
+
   if (!produkSiap) {
-    showNotification('Tunggu sebentar, data produk belum siap.', 'error');
+    showNotification("Tunggu data produk siap...", "error");
     return;
   }
 
-  document.getElementById('modalScanner').classList.remove('hidden');
+  const scannerElement = document.getElementById("scanner");
+  scannerElement.innerHTML = '';
+  document.getElementById("modalScanner").classList.remove("hidden");
 
-  qrScannerInstance = new Html5Qrcode("scanner");
-  qrScannerInstance.start(
-    { facingMode: "environment" },
-    {
-      fps: 10,
-      qrbox: 250,
-      aspectRatio: 1.777,
-      rememberLastUsedCamera: true
+  Quagga.offDetected(); // pastikan tidak ada listener sebelumnya
+
+  Quagga.init({
+    inputStream: {
+      name: "Live",
+      type: "LiveStream",
+      target: scannerElement,
+      constraints: {
+        facingMode: "environment"
+      }
     },
-    (decodedText) => {
-      handleBarcodeResult(decodedText);
-      closeScanner();
-    },
-    (error) => {
-      // Error scanning, bisa diabaikan agar tidak spam
+    decoder: {
+      readers: ["ean_reader", "code_128_reader", "upc_reader"]
     }
-  ).catch(err => {
-    console.error("Scanner start error:", err);
+  }, function (err) {
+    if (err) {
+      console.error("❌ Gagal inisialisasi Quagga:", err);
+      showNotification("Gagal memulai kamera: " + err, "error");
+      return;
+    }
+    console.log("✅ Quagga scanner berhasil dimulai!");
+    Quagga.start();
+  });
+
+  Quagga.onDetected(function (result) {
+    const code = result.codeResult.code;
+    console.log("✅ Barcode terdeteksi:", code);
+    handleBarcodeResult(code);
+    Quagga.stop();
+    document.getElementById("modalScanner").classList.add("hidden");
   });
 }
 
-
 function closeScanner() {
-  if (qrScannerInstance) {
-    qrScannerInstance.stop().then(() => {
-      qrScannerInstance.clear();
-    }).catch(err => console.error(err));
+  try {
+    Quagga.stop();
+    Quagga.offDetected(); // tambahkan ini juga di sini
+  } catch (e) {
+    console.warn("Tidak bisa stop scanner:", e);
   }
-  document.getElementById('modalScanner').classList.add('hidden');
+  document.getElementById("modalScanner").classList.add("hidden");
 }
+
+
 
 function handleBarcodeResult(barcode) {
   console.log("Barcode hasil scan:", barcode.trim());
@@ -1823,29 +1837,6 @@ function renderKulakan() {
   });
 }
 
-
-        let html5QrCode;
-
-// Scanner untuk Tambah Produk ke Keranjang
-function openScanner() {
-  document.getElementById("modalScanner").classList.remove("hidden");
-  html5QrCode = new Html5Qrcode("scanner");
-  html5QrCode.start(
-    { facingMode: "environment" },
-    { fps: 10, qrbox: 250 },
-    (decodedText) => {
-      const produk = produkData.find(p => p.kode === decodedText);
-      if (produk) {
-        tambahKeKeranjang(produk.id);
-        showNotification('Produk ditambahkan lewat scan!', 'success');
-      } else {
-        showNotification('Produk tidak ditemukan!', 'error');
-      }
-      closeScanner();
-    },
-    (err) => { /* Bisa diabaikan */ }
-  );
-}
 let dataCasbon = [];
 
 async function simpanCasbon(transaksi, pelanggan) {
@@ -1893,23 +1884,60 @@ function renderCasbon() {
 // Scanner untuk Input Barcode di Form Produk
 function scanBarcodeProduk() {
   document.getElementById("modalScanner").classList.remove("hidden");
-  html5QrCode = new Html5Qrcode("scanner");
-  html5QrCode.start(
-    { facingMode: "environment" },
-    { fps: 10, qrbox: 250 },
-    (decodedText) => {
-      document.getElementById('barcodeProduk').value = decodedText;
-      showNotification('Barcode berhasil di-scan!', 'success');
-      closeScanner();
+  const scannerElement = document.getElementById("scanner");
+  scannerElement.innerHTML = ''; // Kosongkan dulu isi div
+
+  Quagga.init({
+    inputStream: {
+      name: "Live",
+      type: "LiveStream",
+      target: scannerElement,
+      constraints: {
+        facingMode: "environment"
+      }
     },
-    () => {}
-  );
+    decoder: {
+      readers: ["ean_reader", "code_128_reader", "upc_reader"] // jenis barcode produk umum
+    }
+  }, function (err) {
+    if (err) {
+      console.error(err);
+      showNotification("Gagal memulai kamera", "error");
+      return;
+    }
+    Quagga.start();
+  });
+
+  Quagga.onDetected(function (result) {
+    const code = result.codeResult.code;
+    playBeep(); // 🔊 Bunyi keren ala kasir
+    document.getElementById("barcodeProduk").value = code;
+    showNotification(`Barcode terdeteksi: ${code}`, "success");
+    Quagga.stop();
+    document.getElementById("modalScanner").classList.add("hidden");
+  });
 }
 
+
 function closeScanner() {
-  html5QrCode.stop().then(() => {
-    document.getElementById("modalScanner").classList.add("hidden");
-  }).catch(err => console.error("Stop error", err));
+  try {
+    Quagga.stop();
+  } catch (e) {}
+  document.getElementById("modalScanner").classList.add("hidden");
+}
+function playBeep() {
+  const ctx = new (window.AudioContext || window.webkitAudioContext)();
+  const oscillator = ctx.createOscillator();
+  const gainNode = ctx.createGain();
+
+  oscillator.type = 'square'; // jenis nada (square = khas mesin)
+  oscillator.frequency.setValueAtTime(1000, ctx.currentTime); // nada (Hz)
+  oscillator.connect(gainNode);
+  gainNode.connect(ctx.destination);
+
+  gainNode.gain.setValueAtTime(0.2, ctx.currentTime); // volume
+  oscillator.start();
+  oscillator.stop(ctx.currentTime + 0.15); // durasi 150ms
 }
 
 function tampilkanStruk(transaksi, pelanggan, bayar, kembalian) {
