--- a/index.html
+++ b/index.html
@@ -282,14 +282,29 @@ window.update = update;
         }
         @media print {
   body * {
-    display: none;
+    visibility: hidden;
   }
 
   #modalStruk, #modalStruk * {
-    display: block;
+    visibility: visible;
+  }
+
+  #modalStruk {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background: white;
+    padding: 0;
+    margin: 0;
+    box-shadow: none;
+    overflow: visible !important;
+  }
+
+  #strukButtons {
+    display: none !important;
   }
 }
-
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen">
