--- a/index.html
+++ b/index.html
@@ -280,31 +280,6 @@ window.update = update;
         .notification.error {
             background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
         }
-        @media print {
-  body * {
-    visibility: hidden;
-  }
-
-  #modalStruk, #modalStruk * {
-    visibility: visible;
-  }
-
-  #modalStruk {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background: white;
-    padding: 0;
-    margin: 0;
-    box-shadow: none;
-    overflow: visible !important;
-  }
-
-  #strukButtons {
-    display: none !important;
-  }
-}
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen">
@@ -465,7 +440,7 @@ window.update = update;
   <div class="max-w-sm mx-auto border p-4 rounded-md shadow-md print:shadow-none">
     <div class="text-center mb-4">
       <h2 class="text-xl font-bold">TOKO POJOK BAHRIYAH</h2>
-      <p class="text-sm">Jl. Simpang Tiga Partellon, Jati Jajar Palengaan laok palengaan pamekasa</p>
+      <p class="text-sm">Jl. Simpang Tiga Partellon, Jati Jajar Palengaan laok palengaan pamekasan</p>
       <p class="text-xs text-gray-500">--------------------------------------------------------------</p>
     </div>
 
